--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 200px;
-            background-image: url(gambar/pahlawan\ himmel\ aja.jpg);
+            background-image: url(pahlawan\ himmel\ aja.jpg);
             background-size: cover; 
             background-repeat: no-repeat; 
             background-attachment: fixed;
@@ -16,7 +16,7 @@
             width: 900px;
             height: 300px;
             background-color: skyblue; 
-            background-image: url(gambar/himmel\ new.jpg);
+            background-image: url(himmel\ new.jpg);
             margin-left: auto;
             margin-right: auto;
             border-top-left-radius: 20px;
@@ -78,3 +78,4 @@
     </div>
 </body>
 </html>
+
